--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,30 @@
     <description>Interface Glyph</description>
 
     <properties>
+        <!-- JAVA -->
         <java.version>13</java.version>
         <java.args>--enable-preview</java.args>
+
+        <!-- TEST -->
+        <junit.version>4.12</junit.version>
+        <mockito.version>1.10.19</mockito.version>
     </properties>
+
+    <dependencies>
+        <!-- TEST -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
