--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>dev.drf.glyph.demo</groupId>
     <artifactId>glyph-demo</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <name>Glyph demo</name>
     <description>Interface Glyph</description>
